--- a/index.html
+++ b/index.html
@@ -11,11 +11,22 @@
     <!--Intestazione-->
     <header>
         <img src="./img/Logo.png" alt="logo">
-        <h1>Toboolist</h1>
+        <h1><strong>Toboolist</strong></h1>
     </header>
     
     <!--Contenuto-->
     <main>
+      <div class="container">
+        <!--Bottoni add-->
+        <div class="add">
+            <button class="bg-blue">Add Task</button>
+            <button class="bg-gray">Add Section</button>
+        </div>
+
+
+
+
+      </div>
 
     </main>
 </body>
