--- a/index.html
+++ b/index.html
@@ -25,25 +25,24 @@
 
         <div class="list">
             <!--Lista-->
+            
             <ul>
                 <li><h2>&blacktriangledown; New Task</h2></li>
-                <li><span class="check">&check;</span> Quarterly Newsletter</li>
+                <li><span class="check check_cross">&check;</span> Quarterly Newsletter</li>
 
                 <li><h2>&blacktriangledown; Today</h2></li>
-                <li><span class="check">&check;</span> Recruiting blog post</li>
-                <li><span class="check">&check;</span> Mobile app luaunch</li>
-                <li><span class="cross">&cross;</span> Interview John H.</li>
-                <li><span class="check">&check;</span> Summit update to mobiile storefronts</li>
+                <li><span class="check check_cross">&check;</span> Recruiting blog post</li>
+                <li><span class="check check_cross">&check;</span> Mobile app luaunch</li>
+                <li><span class="cross check_cross">&cross;</span> Interview John H.</li>
+                <li><span class="check check_cross">&check;</span> Summit update to mobiile storefronts</li>
 
                 <li><h2>&blacktriangledown; Upcoming</h2></li>
-                <li><span class="cross">&cross;</span> Schedule meeting with Alex</li>
-                <li><span class="check">&check;</span> Homepage refresh</li>
-                <li><span class="check">&check;</span> Onboard new Sales team members</li>
-                <li><span class="check">&check;</span> Review editorial calendar</li>
-
-
-
+                <li><span class="cross check_cross">&cross;</span> Schedule meeting with Alex</li>
+                <li><span class="check check_cross">&check;</span> Homepage refresh</li>
+                <li><span class="check check_cross">&check;</span> Onboard new Sales team members</li>
+                <li><span class="check check_cross">&check;</span> Review editorial calendar</li>
             </ul>
+            
 
 
         </div>
