--- a/index.html
+++ b/index.html
@@ -28,30 +28,22 @@
             
             <ul>
                 <li><h2>&blacktriangledown; New Task</h2></li>
-                <li><span class="check check_cross">&check;</span> Quarterly Newsletter</li>
+                <li><span class="check check_cross">&check;</span> Quarterly Newsletter <span class="label bg-lightblue">Editorial</span></li>
 
                 <li><h2>&blacktriangledown; Today</h2></li>
-                <li><span class="check check_cross">&check;</span> Recruiting blog post</li>
-                <li><span class="check check_cross">&check;</span> Mobile app luaunch</li>
-                <li><span class="cross check_cross">&cross;</span> Interview John H.</li>
-                <li><span class="check check_cross">&check;</span> Summit update to mobiile storefronts</li>
+                <li><span class="check check_cross">&check;</span> Recruiting blog post <span class="label bg-lightblue">Editorial</span></li>
+                <li><span class="check check_cross">&check;</span> Mobile app luaunch <span class="label bg-purple">Q1 Goals</span></li>
+                <li><span class="cross check_cross">&cross;</span> Interview John H. <span class="label bg-green">Recruiting</span></li>
+                <li><span class="check check_cross">&check;</span> Summit update to mobiile storefronts <span class="label bg-orange">Mobile</span></li>
 
                 <li><h2>&blacktriangledown; Upcoming</h2></li>
                 <li><span class="cross check_cross">&cross;</span> Schedule meeting with Alex</li>
-                <li><span class="check check_cross">&check;</span> Homepage refresh</li>
-                <li><span class="check check_cross">&check;</span> Onboard new Sales team members</li>
-                <li><span class="check check_cross">&check;</span> Review editorial calendar</li>
+                <li><span class="check check_cross">&check;</span> Homepage refresh <span class="label bg-rose">Website</span></li>
+                <li><span class="check check_cross">&check;</span> Onboard new Sales team members <span class="label bg-yellow">Sales</span></li>
+                <li><span class="check check_cross">&check;</span> Review editorial calendar <span class="label bg-lightblue">Editorial</span></li>
             </ul>
-            
-
-
         </div>
-
-
-
-
       </div>
-
     </main>
 </body>
 </html>
